# ltzvisor

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  cp.sh
ns_guest/: .cproject  .project  Makefile  cp_to_ns.sh  ns_guest.elf
ns_guest/inc/: printk.h  string.h  zynq_ttc.h
ns_guest/src/: boot.S  lscript.ld  main.c  vectors.S  zynq_uart.c
pc/: CMakeLists.txt  pc.c  plot.py
pc/plotting/: plotting.ipynb
pc/plotting/.ipynb_checkpoints/: plotting-checkpoint.ipynb
src/: makefile
src/arch/armv7/inc/: asm-offsets.h
src/boards/zedboard/: ltzvisor_hw.c  zynq_ttc.c  zynq_uart.c
src/ns_guest/: ltzvisor_nsguest_config.c
src/ns_guest/FlightControl/: .flight_control.c.swp  flight_control.h
src/ns_guest/Reachability/: 3dof.h  dynamics.h  dynamics_3dof.h  face_lift.c  face_lift.h  geometry.c  geometry.h  simulate.h  util.h
src/s_guest/BareApp/: 3dof.c  CMakeLists.txt  blink.c  blink.h  dynamics_3dof.c  face_lift.c  geometry.c  main.c  objects.mk  util.c
src/s_guest/BareApp/inc/: 3dof.h  blink.h  dynamics.h  dynamics_3dof.h  face_lift.h  geometry.h  params.h  util.h
src/s_guest/BareApp/portable/: hw_zynq.c  s_isr.c
src/s_guest/BareApp/portable/inc/: hw_zynq.h  s_isr.h
