cmake_minimum_required(VERSION 3.9)
project(ltzvisor)

set(CMAKE_CXX_STANDARD 11)

add_executable(ltzvisor
        src/arch/armv7/Cortex-A9/inc/platform_asm.h
        src/arch/armv7/inc/asm-offsets.h
        src/arch/armv7/inc/cpu_cp15_switch.h
        src/arch/armv7/inc/cpu_defines.h
        src/arch/armv7/inc/cpu_handlers.h
        src/arch/armv7/inc/cpu_helper.h
        src/arch/armv7/inc/cpu_stack.h
        src/arch/armv7/inc/cpu_vcpu.h
        src/arch/armv7/inc/types.h
        src/arch/armv7/asm-offsets.c
        src/arch/armv7/cpu_handlers.c
        src/arch/armv7/cpu_helper.c
        src/arch/armv7/cpu_stack.c
        src/boards/zc702/inc/board.h
        src/boards/zc702/inc/ltzvisor_hw.h
        src/boards/zc702/inc/platform_zynq.h
        src/boards/zc702/inc/zynq_ttc.h
        src/boards/zc702/inc/zynq_uart.h
        src/boards/zc702/board.c
        src/boards/zc702/ltzvisor_hw.c
        src/boards/zc702/zynq_ttc.c
        src/boards/zc702/zynq_uart.c
        src/boards/zedboard/inc/board.h
        src/boards/zedboard/inc/ltzvisor_hw.h
        src/boards/zedboard/inc/platform_zynq.h
        src/boards/zedboard/inc/zynq_ttc.h
        src/boards/zedboard/inc/zynq_uart.h
        src/boards/zedboard/board.c
        src/boards/zedboard/ltzvisor_hw.c
        src/boards/zedboard/zynq_ttc.c
        src/boards/zedboard/zynq_uart.c
        src/boards/zybo/inc/board.h
        src/boards/zybo/inc/ltzvisor_hw.h
        src/boards/zybo/inc/platform_zynq.h
        src/boards/zybo/inc/zynq_ttc.h
        src/boards/zybo/inc/zynq_uart.h
        src/boards/zybo/board.c
        src/boards/zybo/ltzvisor_hw.c
        src/boards/zybo/zynq_ttc.c
        src/boards/zybo/zynq_uart.c
        src/core/inc/ltzvisor.h
        src/core/inc/ltzvisor_api.h
        src/core/inc/ltzvisor_syscall_asm.h
        src/core/ltzvisor.c
        src/core/ltzvisor_api.c
        src/drivers/common/inc/gic.h
        src/drivers/common/gic.c
        src/drivers/inc/gic.h
        src/drivers/zynq/inc/board.h
        src/drivers/zynq/inc/ltzvisor_hw.h
        src/drivers/zynq/inc/platform_zynq.h
        src/drivers/zynq/inc/xilinx_uart.h
        src/drivers/zynq/inc/zynq_ttc.h
        src/drivers/zynq/board.c
        src/drivers/zynq/ltzvisor_hw.c
        src/drivers/zynq/xilinx_uart.c
        src/drivers/zynq/zynq_ttc.c
        src/drivers/gic.c
        src/lib/inc/io.h
        src/lib/inc/math.h
        src/lib/inc/printk.h
        src/lib/inc/string.h
        src/lib/io.c
        src/lib/printk.c
        src/lib/string.c
        src/ns_guest/inc/ltzvisor_nsguest_config.h
        src/ns_guest/ltzvisor_nsguest_config.c
        src/s_guest/BareApp/portable/inc/hw_zynq.h
        src/s_guest/BareApp/portable/inc/s_isr.h
        src/s_guest/BareApp/portable/hw_zynq.c
        src/s_guest/BareApp/portable/s_isr.c
        src/s_guest/BareApp/blink.c src/s_guest/BareApp/inc/blink.h src/s_guest/BareApp/util.c src/s_guest/BareApp/inc/util.h)
